--- a/style.css
+++ b/style.css
@@ -26,3 +26,10 @@ body {
     border: 3px solid #333;
     background-color: #000;
 }
+
+#pause-btn {
+    margin-top: 10px;
+    padding: 10px;
+    cursor: pointer;
+    width: 100%;
+}
